MOSIP-44120 corrected plugin
Signed-off-by: kameshsr <kameshsr1338@gmail.com>